# helloagi

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  helloagi.example.json  pyproject.toml  pytest.ini  setup.py  sitecustomize.py
.github/workflows/: gitleaks.yml  publish-pypi.yml
agi_runtime/: __init__.py
docs/: ARCHITECTURE_AUDIT.md  COMPETITOR_COMPARISON.md  EVALUATION_SCORECARD.md  FINAL_UPGRADE_REPORT.md  HELLOAGI_VISION.md  IMPLEMENTATION_PLAN.md  TARGET_ARCHITECTURE.md  UPGRADE_GUIDE.md  architecture.md  channels.md  cli-reference.md  cognitive-runtime.md  deployment.md  environment.md  install.md  migration.md  peer-parity-roadmap.md  platforms.md  privacy.md  production-checklist.md  providers.md  reminders-scheduling.md  repo-learnings.md  security.md  srg-integration.md  streaming-contract.md  tri-loop.md  troubleshooting.md  uninstall.md  updating.md  x-bottlenecks.md
docs/cycles/: cycle-01-report.md  cycle-02-report.md
docs/research/: CONTEXT_UNROLLING_ANALYSIS.md  COSPLAY_ANALYSIS.md  SRG_ANALYSIS.md  VLAA_ANALYSIS.md
docs/roadmap/: MASTERPLAN.md
examples/: basic_agent.py  demo_session.txt  governance_demo.py  intelligence_demo.py  skill_creation.py  tools_demo.py
memory/: growth.json  identity_state.json  mood.json
scripts/: cognitive_dashboard.py  install.ps1  install.sh  replay_trace.py
src/agi_runtime/: __init__.py  _imports.py  cli.py
tests/: final_check.py  test_agent.py  test_ale.py  test_auth_profiles.py  test_circuit_breaker.py  test_cli_contract.py  test_compressor.py  test_dashboard.py  test_embeddings.py  test_extensions_runtime.py  test_governance.py  test_intelligence.py  test_migration_service.py  test_onboarding.py  test_openclaw_bridge.py  test_orchestrator_runtime.py  test_policy_packs.py  test_provider_credentials.py  test_runs_runtime.py  test_send_file_fallback.py  test_send_file_governance.py  test_send_voice_tool.py  test_service_manager_doctor.py  test_settings.py  test_skills.py  test_supervisor.py  test_telegram_markdown.py  test_tools.py
tests/architecture/: test_kernel.py  test_scheduler.py
tests/auth/: test_openai_codex_oauth.py
tests/autonomy/: test_tri_loop.py  test_tri_loop_routing.py  test_tri_loop_skill_extract.py
tests/browser/: test_browser_engine.py
tests/channels/: test_telegram_live_preview.py  test_telegram_principal_isolation.py  test_telegram_reminders.py  test_telegram_rendering.py  test_telegram_stream.py  test_voice_channel.py  test_voice_presence.py
tests/cognition/: test_council.py  test_council_breaker.py  test_crystallize.py  test_feedback.py  test_fingerprint.py  test_llm_agent.py  test_router_decision.py  test_stall.py  test_system1.py  test_trace_store.py
tests/context/: test_context_manager.py
tests/core/: test_agent_streaming.py  test_first_turn_state_machine.py  test_max_turns_synthesis.py  test_prompt_contracts.py  test_step_callback.py
tests/diagnostics/: test_replay.py  test_scorecard.py
tests/e2e/: test_agent_long_horizon.py  test_competitor_scenarios.py  test_context_memory.py  test_skill_reuse.py  test_srg_governance.py  test_tri_loop.py  test_vlaa_recovery.py
tests/governance/: test_governance_logger.py  test_memory_guard.py  test_output_guard.py  test_policy_loader.py  test_posture.py
tests/intelligence/: test_pattern_topic_tools.py
tests/llm/: test_gemini_stream_accumulator.py
tests/memory/: test_identity_guard.py  test_principal_scoped_recall.py  test_principals.py
tests/models/: test_gemini_router.py  test_provider_router.py
tests/orchestration/: test_graph.py  test_orchestrator.py
tests/reliability/: test_reliability.py
tests/reminders/: test_parse.py  test_schedule.py  test_store.py  (+1 more)
(+162 files in other folders)
