[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helloagi"
version = "0.5.0"
description = "The first open-source AGI runtime with governed autonomy, evolving identity, and anticipatory intelligence."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Eng. Mohammed Mazyad Alkhaldi", email = "helloagi@proton.me"},
]
keywords = [
    "agi", "ai-agent", "autonomous-agent", "governance", "srg",
    "llm", "orchestration", "local-first", "claude", "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "anthropic>=0.30",
    "anyio>=4.0",
    "croniter>=2.0",
    "requests>=2.28",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
telegram = ["python-telegram-bot>=20.0"]
discord = ["discord.py>=2.0"]
embeddings = ["google-genai>=1.0"]
claude-sdk = ["claude-agent-sdk>=0.1"]
all = [
    "rich>=13.0",
    "python-telegram-bot>=20.0",
    "discord.py>=2.0",
    "google-genai>=1.0",
    "claude-agent-sdk>=0.1",
]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
helloagi = "agi_runtime.cli:main"

[project.urls]
Homepage = "https://github.com/mmsk2007/helloagi"
Documentation = "https://github.com/mmsk2007/helloagi/tree/main/docs"
Repository = "https://github.com/mmsk2007/helloagi"
Issues = "https://github.com/mmsk2007/helloagi/issues"

[tool.setuptools.packages.find]
where = ["src"]
